# GA_Pruning

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: ORFEO.md  PROJECT_GUIDE.md
notebooks/: report.py  report_wasm.py
notebooks/public/results/: ablation.json  structured.json  unstructured.json
scripts/: download.py  run_orfeo.sh
scripts/slurm/: stage.sbatch
src/gamo/: methods.py
src/gamo/ga/: multiobjective.py  operators.py  search.py  structured.py  unstructured.py
src/gamo/model/: model.py
src/gamo/report/: __init__.py  data.py  plots.py
src/gamo/run/: ablation.py  experiment.py  multiobjective.py  structured.py  structured_methods.py  unstructured.py
src/gamo/train/: train.py
src/gamo/utils/: data.py  environment.py  model_utils.py  paths.py  pruning.py
tests/: test_ga.py  test_model.py  test_multiobjective.py  test_structured.py
