[project]
name = "gamo"
version = "0.1.0"
description = "Genetic-algorithm pruning of neural networks (GAMO course project)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "safetensors>=0.4.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "plotly>=6.0.0",
    "marimo>=0.23.13",
    "platypus-opt>=1.4.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"
